# otf

./: .codespellrc  .flake8  .gitignore  .readthedocs.yml  .tox_requirements.txt  CONTRIBUTING.rst  README.md  README.rst  environment.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml  test.pypi.yml
docs/: CONTRIBUTING.md  api.rst  conf.py  deep_dive.rst  deep_dives.rst  index.rst  license.rst  requirements.txt  workflow_compilation.rst
docs/deep_dives/: workflow_compilation.rst
docs/deep_dives/examples/: workflow.py
docs/examples/: introduction.ipynb  serialisation.ipynb  workflow.py
docs/ext/: asdl_highlight.py  sphinxotf.py
docs/modules/: grammar.asdl  local_scheduler.rst  pack.rst  pack_bin.rst  pack_text.rst  pack_tree.rst  pretty.rst  runtime.rst
scripts/: env-regen  flake8_otf_plugin.py  jupyter  nbrefresh.py  sphinx-watch  watch-tests
src/otf/: __init__.py  _ipy_utils.py  analyze.py  ast_utils.py  compiler.py  decorators.py  local_scheduler.py  pack.py  parser.py  pretty.py  runtime.py  utils.py
src/otf/pack/: __init__.py  _bin_tools.py  base.py  bin.py  text.py  tree.py
tests/: __init__.py  pack_utils.py  test_analyze.py  test_ast_utils.py  test_compiler.py  test_decorators.py  test_local_scheduler.py  test_pack.py  test_pack_bin.py  test_parser.py  test_pretty.py  test_runtime.py  test_utils.py  utils.py
